<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etId"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Masukkan id"
                tools:ignore="Autofill,LabelFor"
                android:inputType="text"/>
            <EditText
                android:id="@+id/etEmail"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                tools:ignore="Autofill,LabelFor"
                android:inputType="textEmailAddress" />
            <EditText
                android:id="@+id/etPassword"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:ignore="Autofill,LabelFor,TextFields" />

            <Button
                android:id="@+id/loginBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="80dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/green"
                android:text="@string/loginBtn"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/belum_punya_akun"/>

                <TextView
                    android:id="@+id/click_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textColor="@color/green"
                    android:clickable="true"
                    android:focusable="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/click_LupaID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Lupa ID atau Password"
                    android:textColor="@color/green"
                    android:layout_marginRight="25sp"
                    android:clickable="true"
                    android:focusable="true" />

            </LinearLayout>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>