<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:orientation="vertical"
    tools:context=".Daftar">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pendaftaran Pengguna Baru"
            android:textSize="25sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:textStyle="bold"
            android:textColor="@color/white">
        </TextView>

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etFullName"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nama Lengkap"
                tools:ignore="Autofill,LabelFor"
                android:inputType="text" />
            <EditText
                android:id="@+id/etEmail"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>

            <Spinner
                android:id="@+id/sp_jenisK"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="match_parent"
                android:spinnerMode="dropdown">

            </Spinner>

            <EditText
                android:id="@+id/etPassword"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:ignore="Autofill,LabelFor,TextFields" />
            <EditText
                android:id="@+id/etKonfirmasiPass"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Konfirmasi Password"
                android:inputType="textPassword"
                tools:ignore="Autofill,LabelFor,TextFields" />

            <Button
                android:id="@+id/registerBTN"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="20sp"
                android:text="@string/register"
                android:layout_gravity="center"
                android:backgroundTint="@color/green"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sudah punya akun?"/>

                <TextView
                    android:id="@+id/clickLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/login"
                    android:textColor="@color/green"
                    android:clickable="true"
                    android:focusable="true" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    </RelativeLayout>

</LinearLayout>